cnpg/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: cnpg-strict-mtls
  namespace: cnpg
spec:
  mtls:
    mode: STRICT  # Enforce mTLS for all workloads
