cnpg/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: postgres-gateway
  namespace: cnpg
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: tls-postgres
      number: 5432
      protocol: TLS
    tls:
      mode: PASSTHROUGH
