cnpg/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres-routing
spec:
  hosts:
  - "app1-pg-cluster.local"
  - "app2-pg-cluster.local"
  gateways:
  - postgres-gateway
  tcp:
  - match:
    - port: 5432
      sniHosts:
      - "app1-pg-cluster.local"
    route:
    - destination:
        host: app1-pg-cluster-rw
        port:
          number: 5432
  - match:
    - port: 5432
      sniHosts:
      - "app2-pg-cluster.local"
    route:
    - destination:
        host: app2-pg-cluster-rw
        port:
          number: 5432
